@@ -3,6 +3,8 @@
 	* IgProf.h, IgProf.cc (IGPROF_ASSERT, IGPROF_TRACE, panic): New
 	profiler tool debugging utilities.
 
+	* IgProfFileDesc.cc, IgProfPerf.cc: Use them.
+	
 2004-05-12  Lassi A. Tuura  <lat@iki.fi>
 
 	* igprof-analyse: Fix dump reading bugs.  Take into account key
